dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.50)
AC_INIT(libtvuti.gpr)
AC_CONFIG_HEADER(config.h:config.hin)
AC_PROG_CC
AC_CANONICAL_HOST

case "$host" in
  i?86-*-linux*) rhide_OS=Linux ;;
  i?86-pc-msdosdjgpp) rhide_OS=DJGPP ;;
  *-pc-cygwin) rhide_OS=CYGWIN ;;
  *) AC_MSG_ERROR([$host is not supported (yet). Sorry.]) ;;
esac

AC_LANG_PUSH([C++])
AC_CHECK_HEADERS(streambuf)

AC_LANG_POP()

AC_OUTPUT()
